2003-01-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Removed reference to NSImageDoesCaching.
	This variable was removed in the gui library and was causing
	compilation to fail.   Also cleaned up main() by getting rid
	of some old comments.
	
2003-01-21  Adam Fedor  <fedor@gnu.org>

	* Version: 0.2.5

2003-01-16  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: awakeFromNib added to set the mainMenu to
	the new menu defined in the .gorm file.   This is to
	correct a bug when testing the interface.
	* GormPrivate.h: Added new outlet to hold Gorm menu.
	* Resources/Gorm.gorm: Added outlet for gormMenu.

2003-01-15  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [NSWindowTemplate initWithObject:]: corrected
	a problem which was preventing the stylemask from being
	saved.
	* GormDocument.[hm]: Added code to support the deferred
	flag for windows.  setObject:isDeferred: and 
	objectIsDeferred: were added.
	* Palettes/main.m: Added support for deferred flag.
	I didn't enable the flag in the gui, since
	NSBundleAdditions.m needs to be changed to allow this
	flag to be used.  Once that's done, it will be enabled.
	
2003-01-14  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: replaceTemplatesWithObjects: when
	restoring the editing object the template was not
	being destroyed properly.  This is now fixed.

2003-01-14  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: replaceObjectsWithTemplates: added a
	call to a new method in the class manager which returns
	custom classes based on the name assigned to the object.
	* GormClassManager.m: Added a method to pull the custom
	class association by name.  This corrected an issue
	with custom classes.

2003-01-13  Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: openGModel: added code to import
	the headers of custom classes read from the .gmodel file.

2003-01-12  Gregory John Casamento <greg_casamento@yahoo.com>
