@@ -1,3 +1,11 @@
+2003-01-23  Gregory John Casamento <greg_casamento@yahoo.com>
+	
+	* Gorm.m: Some general cleanup.  Removed the startuptime
+	message.  Indented some code to conform to guidelines.
+	* GModelDecoder.m: Added GormNSPanel to the set of classes
+	translated so that the window inspectors can be used to edit.
+	* Documentation/readme.texi: Updated to show current status.
+	
 2003-01-22  Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Gorm.m: Removed reference to NSImageDoesCaching.
